--- a/automations.yaml
+++ b/automations.yaml
@@ -157,7 +157,7 @@
     data:
       message: ':fire: Enough warmth. Turning off the electric blanket.'
 
-- alias: Turn on bed lights at 7pm
+- alias: Turn on bed lights at 1800
   trigger:
     - platform: time
       at: '18:00:00'
@@ -169,10 +169,10 @@
     data:
       message: ":electric_plug: It's almost bed time. Turning the underlights on."
 
-- alias: Turn off bed lights 7am
+- alias: Turn off bed lights 0815
   trigger:
     - platform: time
-      at: '07:00:00'
+      at: '08:15:00'
   action:
   - service: light.turn_off
     data:
@@ -181,10 +181,10 @@
     data:
       message: ':electric_plug: Morning! Turning off the bed lights now.'
 
-- alias: Turn off Christmas lights at 1am
+- alias: Turn off Christmas lights at midnight
   trigger:
     - platform: time
-      at: '01:00:00'
+      at: '00:00:00'
   action:
   - service: switch.turn_off
     data:
