--- a/automations.yaml
+++ b/automations.yaml
@@ -71,7 +71,19 @@
 
 - alias: Motion alert
   trigger:
-  - entity_id: group.all_motion_sensors
+  - entity_id: binary_sensor.hall_motion
+    platform: state
+    to: 'on'
+  - entity_id: binary_sensor.landing_motion
+    platform: state
+    to: 'on'
+  - entity_id: binary_sensor.nodemcu1
+    platform: state
+    to: 'on'
+  - entity_id: binary_sensor.office_sensor
+    platform: state
+    to: 'on'
+  - entity_id: binary_sensor.thomas_sensor
     platform: state
     to: 'on'
   condition:
@@ -79,7 +91,26 @@
     entity_id: input_boolean.enable_security
     state: 'on'
   action:
-  - service: script.notify_on_motion_alert
+  - service: notify.slack
+    data_template:
+      message: >
+        :warning: Motion detected in the *{{ trigger.to_state.name }}*. 
+      target: "#home"
+      title: "Alert"
+      data:
+        file:
+          url: >
+            {% set e = trigger.entity_id %}
+            {%- if e == "binary_sensor.hall_motion" -%}
+            {% set url = states.camera.hall.attributes.entity_picture %}
+            {%- elif e == "binary_sensor.landing_motion" -%}
+            {% set url = states.camera.landing.attributes.entity_picture %}
+            {%- elif e == "binary_sensor.thomas_sensor" -%}
+            {% set url = states.camera.thomas.attributes.entity_picture %}
+            {%- endif -%}
+            {%- if url -%}
+            https://{{ states.sensor.secrets.attributes.base_url }}{{ url }}
+            {%- endif -%}
 
 - alias: Low battery alert
   trigger:
@@ -92,7 +123,7 @@
   action:
   - service: notify.slack
     data_template:
-      message: ':battery: {{ trigger.to_state.attributes.friendly_name }}''s is less than 20% battery'
+      message: ':battery: {{ trigger.to_state.name }} is less than 20% battery'
 
 - alias: Low outside temperature
   trigger:
@@ -157,7 +188,7 @@
     data:
       message: ':fire: Enough warmth. Turning off the electric blanket.'
 
-- alias: Turn on bed lights at 1800
+- alias: Turn on bed lights at 6pm
   trigger:
     - platform: time
       at: '18:00:00'
@@ -169,10 +200,10 @@
     data:
       message: ":electric_plug: It's almost bed time. Turning the underlights on."
 
-- alias: Turn off bed lights 0815
+- alias: Turn off bed lights 8am
   trigger:
     - platform: time
-      at: '08:15:00'
+      at: '08:00:00'
   action:
   - service: light.turn_off
     data:
@@ -184,7 +215,7 @@
 - alias: Turn off Christmas lights at midnight
   trigger:
     - platform: time
-      at: '00:00:00'
+      at: '00:00:01'
   action:
   - service: switch.turn_off
     data:
