--- a/sensors.yaml
+++ b/sensors.yaml
@@ -66,7 +66,7 @@
     lights_on_count:
       friendly_name: 'Lights On'
       value_template: >
-        {%- set lights = [states.light.dining_room, states.light.bedroom, states.switch.desk_lights_switch, states.light.bed_underlights, states.switch.christmas_lights] %}
+        {%- set lights = [states.light.dining_room, states.light.bedroom, states.light.downstairs_toilet, states.light.hall, states.light.living_room_play_area, states.light.living_room_tv_area, states.switch.desk_lights_switch, states.switch.christmas_lights] %}
         {% for light in lights if light.state == 'on' %}
           {% if loop.last %}
             {{loop.index}} 
