--- a/www/custom_ui/floorplan/first_floor.yaml
+++ b/www/custom_ui/floorplan/first_floor.yaml
@@ -22,14 +22,6 @@ rules:
     - camera.thomas
     - camera.garden
 
-  - name: Trackers
-    entities:
-      - device_tracker.lynette_iphone
-      - device_tracker.gregs_iphone_8
-    states:
-      - state: 'home'
-        class: 'device-home'
-
   - name: Media Players
     entities:
       - media_player.bedroom
@@ -40,8 +32,10 @@ rules:
   - name: Sensors
     entities:
       - binary_sensor.office_sensor
-      - binary_sensor.thomas_sensor
       - binary_sensor.landing_motion
+      - binary_sensor.thomas_sensor
     states:
       - state: 'off'
         class: 'invisible'
+      - state: 'on'
+        class: 'unclickable'
