--- a/www/custom_ui/floorplan/ground_floor.yaml
+++ b/www/custom_ui/floorplan/ground_floor.yaml
@@ -6,6 +6,10 @@ rules:
   - name: Lights
     entities:
     - light.dining_room
+    - light.hall
+    - light.downstairs_toilet
+    - light.living_room_tv_area
+    - light.living_room_play_area
     states:
       - state: 'on'
         class: 'light-on'
@@ -19,11 +23,3 @@ rules:
     - camera.drive
     - camera.hall
     - camera.garden
-
-  - name: Trackers
-    entities:
-      - device_tracker.lynette_iphone
-      - device_tracker.gregs_iphone_8
-    states:
-      - state: 'home'
-        class: 'device-home'
