--- a/customize_glob.yaml
+++ b/customize_glob.yaml
@@ -8,7 +8,7 @@ binary_sensor.thomas_sensor:
     group:
     group.thomas:
         friendly_name: 'Motion'
-binary_sensor.office_sensor:
+binary_sensor.office_motion:
     show_last_changed: true
 sensor.thomas_luminance:
     group:
