--- a/groups.yaml
+++ b/groups.yaml
@@ -96,7 +96,7 @@ camera_controls:
 all_motion_sensors:
   entities:
     - binary_sensor.thomas_sensor
-    - binary_sensor.office_sensor
+    - binary_sensor.office_motion
     - binary_sensor.hall_motion
     - binary_sensor.landing_motion
 
@@ -115,9 +115,10 @@ motion:
     - input_boolean.enable_motion_alerts
     - input_boolean.enable_cameras
     - binary_sensor.thomas_sensor
-    - binary_sensor.office_sensor
+    - binary_sensor.office_motion
     - binary_sensor.hall_motion
     - binary_sensor.landing_motion
+    - binary_sensor.nodemcu2
 
 lights:
   entities:
@@ -165,7 +166,8 @@ thomas:
 office:
   entities:
     - switch.desk_lights_switch
-    - binary_sensor.office_sensor
+    - binary_sensor.office_motion
+    - binary_sensor.nodemcu2
     - light.backlights
     - sensor.office_temperature
     - sensor.office_luminance
