--- a/www/custom_ui/floorplan/floorplan.yaml
+++ b/www/custom_ui/floorplan/floorplan.yaml
@@ -43,7 +43,7 @@ rules:
 
   - name: Sensors
     entities:
-      - binary_sensor.office_sensor
+      - binary_sensor.office_motion
       - binary_sensor.landing_motion
       - binary_sensor.thomas_sensor
     states:
