--- a/groups.yaml
+++ b/groups.yaml
@@ -97,7 +97,7 @@ all_motion_sensors:
   entities:
     - binary_sensor.thomas_sensor
     - binary_sensor.office_motion
-    - binary_sensor.hall_motion
+    - binary_sensor.hall_sensor
     - binary_sensor.landing_motion
 
 links:
@@ -116,7 +116,7 @@ motion:
     - input_boolean.enable_cameras
     - binary_sensor.thomas_sensor
     - binary_sensor.office_motion
-    - binary_sensor.hall_motion
+    - binary_sensor.hall_sensor
     - binary_sensor.landing_motion
 
 lights:
