--- a/sensors.yaml
+++ b/sensors.yaml
@@ -75,7 +75,7 @@
     motion_on_count:
       friendly_name: 'Motion Sensors On'
       value_template: >
-        {%- set sensors = [states.binary_sensor.thomas_sensor, states.binary_sensor.office_motion, states.binary_sensor.hall_motion, states.binary_sensor.landing_motion] %}
+        {%- set sensors = [states.binary_sensor.thomas_sensor, states.binary_sensor.office_motion, states.binary_sensor.hall_sensor, states.binary_sensor.landing_motion] %}
         {% for entity in sensors if entity.state == 'on' %}
           {% if loop.last %}
             {{loop.index}} 
@@ -83,7 +83,7 @@
         {% endfor %}
     last_camera_motion:
       value_template: >
-        {%- set sensors = [states.binary_sensor.hall_motion, states.binary_sensor.landing_motion] %}
+        {%- set sensors = [states.binary_sensor.hall_sensor, states.binary_sensor.landing_motion] %}
         {% for sensor in sensors %}
           {% if as_timestamp(sensor.last_changed) == as_timestamp(sensors | map(attribute='last_changed') | max) %}
             {{ sensor.name }}
