--- a/www/custom_ui/floorplan/floorplan.yaml
+++ b/www/custom_ui/floorplan/floorplan.yaml
@@ -46,6 +46,7 @@ rules:
       - binary_sensor.office_motion
       - binary_sensor.landing_motion
       - binary_sensor.thomas_sensor
+      - binary_sensor.hall_sensor
     states:
       - state: 'off'
         class: 'invisible'
